test/expected/declare_rrgi.out
declare x as reference to register int
        ^
9: error: reference to register is illegal
